# linuxc_demo

./: .gitignore  CMakeLists.txt  README.md  http.code-workspace  http.js  http_demo  httpserver.js  imx.config  imx6_toolchain.config  linuxc.code-workspace  makefile  tcpserver.js  test.db  test_file
LinkSDK/: ChangeLog.md  linkapp  makefile
alink/: alinkapp  hylink  libali  libhytool  linkapp  makefile
alinksdk/: README.md  make copy.settings  make.settings
alisdk/: make.settings
alsa/: alsa.c  alsa.h  alsa_conf.c  alsa_conf.h  alsa_demo  alsa_record.c  alsa_record.h  main.c  makefile  wav.h
coap/: coapapp  makefile
cpython/: HY123.py  TS0002.py  cpy_demo  cpython.c  fib.pyx  makefile  pytest.py
cunit/: makefile  testcunitapp
curl/: curl_demo  data.html  download.c  download.h  main.c  makefile
display/: receiveData.c  receiveData.h
ffmpeg/: app  avio_reading.c  dec_video  demuxing_decoding.c  enc.264  enc_video  ffmpeg  ffmpeg.sh  makefile  push_stream  run.sh
file_transfer/: fileapp  makefile
hilink2/: hilinkapp  makefile
hylink/: hylinkapp  libhytool_u86  makefile
i2c/: commom.h  hal_iic.c  hal_iic.h  i2c_demo  i2c_std.c  i2c_std.h  main.c  makefile
include/: commom.h  event_app.h  event_server.h  event_test.h  file.h  http.h
itop/: itop  main.c  makefile
libevent/: CMakeLists.txt  makefile
libevent/include/: commom.h  event_app.h  event_buffer_test.h  http_test.h  pthread_test.h  sqlite_test.h
libevent/src/: event_buffer_test.c  http_test.c  main.c  pthread_test.c
libhv/: UartCfg.c  UartCfg.h  libhv_demo  main.c  makefile
libhylink/: makefile
libhytool/: makefile
libuv/: fs.c  fs.h  main.c  makefile  net.c  net.h
lua/: add.lua  main.c  makefile
lvgl/: commom.h  lv_conf.h  main.c  makefile
memory/: core  makefile  memapp
mpp/: Makefile.param  cfg.mak
net/: client.c  client.h  log.c  log.h  main.c  makefile  server  server.c  server.h  socket.c  socket.h
notebook/: A33.md  bookmarks_2021_7_20.html  dhcp_temp.conf  docker.md  esp.md  favorites_2022_4_22.html  git.md  hisiev300.md  hisiev300.xml  hostapd_rk3308.conf  hostapd_temp.conf  imx6.md  kernel.md  linux.md  live555.md  mynote.md  net.md  openwrt.md  qt.md  reatek_linux.md  rk3308_32_compile.md  rk3308_test.md  sql.md  third_lib.md  音标.md
onvif/: makefile  soapStub.h  (+3 more)
(+2618 files in other folders)
